RESOLVED FIXED145032
REGRESSION (r183794): Garbage tiles when body background switches to fixed
https://bugs.webkit.org/show_bug.cgi?id=145032
Summary REGRESSION (r183794): Garbage tiles when body background switches to fixed
Simon Fraser (smfr)
Reported 2015-05-14 18:07:27 PDT
REGRESSION (r183794): Garbage tiles when body background switches to fixed
Attachments
Patch (9.06 KB, patch)
2015-05-14 18:14 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2015-05-14 18:14:19 PDT
WebKit Commit Bot
Comment 2 2015-05-14 21:44:34 PDT
Comment on attachment 253163 [details] Patch Clearing flags on attachment: 253163 Committed r184371: <http://trac.webkit.org/changeset/184371>
WebKit Commit Bot
Comment 3 2015-05-14 21:44:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.